# SteerBehaviour

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  results.txt  setup.cfg  setupvenv.ps1  setupvenv.sh  tox.ini
.github/workflows/: tests.yml
playground/: vector_convert.ipynb
src/: game_loop.py  movable_entity.py  vmath.py
src/gfx/: sprite.py
src/infra/: vmath.py
src/steer/: formation.py  globals.py  movable_entity.py  path.py  squad.py  squad_behaviour.py  squad_behaviour_condition.py  steer_behaviour 2.py  steer_behaviour.py
unittest/: test_formation.py  test_movable_entity.py  test_path.py  test_squad.py  test_squad_behaviour.py  test_steer_behaviour.py  test_vmath 2.py  test_vmath.py
