[metadata]
name = steer_behaviour
description = Python Steering Behaviour Implementation
author = Shay Levy
platforms = unix, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
#packages = find:
package_dir=
    =src
    
install_requires =
    PyYAML>=6
python_requires = >=3.6
zip_safe = no


[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
steer_behaviour = py.typed

[flake8]
max-line-length = 180
ignore = E305, E302, W293, E303, E225, E731, W503

